2003-07-29  Heikki Junes <hjunes@cc.hut.fi>

        * { many }: Use two uppercase letters in LilyPond.

2003-07-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/regression/font-name.ly: don't use PS fonts for
	compatibility reasons. 

	* mutopia/claop.py (accents): update to 1.8

	* Documentation/user/music-glossary.tely (Top): remove 13pt.

	* Documentation/user/macros.itexi: don't color glossary links.

	* Documentation/user/invoking.itexi (Error messages): new section

2003-07-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/regression/font-name.ly: add file.

	* scm/document-backend.scm (grob-doc): remove <hr> from
	lilypond-internals

	* Documentation/topdocs/INSTALL.texi (Top): bump GUILE
	reqd version to 1.6.4 

	* lily/font-interface.cc (get_font): bugfix: take font-name from
	alist chain too. This fixes font-name override for \markup.

2003-07-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/pictures/GNUmakefile (OUT_DIST_FILES): Remove icon.

	* input/test/polymetric-differing-notes.ly: Compile fix.

2003-07-28  Juergen Reuter  <reuter@ipd.uka.de>

	* Documentation/user/refman.itely: fixed typo

	* lily/vaticana-ligature-engraver.cc: bugfix: insert extra space
	before flexa

2003-07-27  Heikki Junes  <hjunes@cc.hut.fi>

	* input/test/{ many }: search & fix some typos.

2003-07-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/ly2dvi.py (include_path): use preview_resolution for PNG
	images.

	* scm/music-functions.scm (make-voice-props-set): set Script /
	TextScript dir for polyphony too.

	* scm/define-grobs.scm (all-grob-descriptions): decrease space
	before clef.

	* flower/libc-extension.cc (my_round): ANSI-C compatible rounding.

2003-07-27  Rune Zedeler  <rz@daimi.au.dk>

	* Documentation/user/refman.itely (Percussion): Small
	clarifications and fixes.

	* scm/drums.scm: Bugfix: Use string instead of symbol when naming
	threads. This fixes different heads playing simultaneously.

2003-07-27  Heikki Junes  <hjunes@cc.hut.fi>
