@@ -108,7 +108,7 @@ static Long_option_init options_static[] = {
   /* another bug in option parser: --output=foe is taken as an abbreviation
      for --output-format */
   {_i ("EXT"), "format", 'f', _i ("use output format EXT")},
-  {0, "help", 'h',  _i ("this help")},
+  {0, "help", 'h',  _i ("print this help")},
   {_i ("FIELD"), "header", 'H',  _i ("write header field to BASENAME.FIELD")},
   {_i ("DIR"), "include", 'I',  _i ("add DIR to search path")},
   {_i ("FILE"), "init", 'i',  _i ("use FILE as init file")},
@@ -123,7 +123,7 @@ static Long_option_init options_static[] = {
   {0, "safe", 's',  _i ("inhibit file output naming and exporting")},
 #endif
   {0, "version", 'v',  _i ("print version number")},
-  {0, "verbose", 'V', _i ("verbose")},
+  {0, "verbose", 'V', _i ("be verbose")},
   {0, "warranty", 'w',  _i ("show warranty and copyright")},
   {0,0,0,0}
 };
