@@ -97,12 +97,12 @@ option_definitions = [
 	('', 'a', 'absolute-pitches', _ ("print absolute pitches")),
 	(_ ("DUR"), 'd', 'duration-quant', _ ("quantise note durations on DUR")),
 	('', 'e', 'explicit-durations', _ ("print explicit durations")),
-	('', 'h', 'help', _ ("this help")),
+	('', 'h', 'help', _ ("print this help")),
 	(_ ("ALT[:MINOR]"), 'k', 'key', _ ("set key: ALT=+sharps|-flats; MINOR=1")),
 	(_ ("FILE"), 'o', 'output', _ ("write ouput to FILE")),
 	(_ ("DUR"), 's', 'start-quant', _ ("quantise note starts on DUR")),
 	(_ ("DUR*NUM/DEN"), 't', 'allow-tuplet', _ ("allow tuplet durations DUR*NUM/DEN")),
-	('', 'V', 'verbose', _ ("verbose")),
+	('', 'V', 'verbose', _ ("be verbose")),
 	('', 'v', 'version', _ ("print version number")),
 	('', 'w', 'warranty', _ ("show warranty and copyright")),
 	('', 'x', 'text-lyrics', _ ("treat every text as a lyric")),
