@@ -2,6 +2,8 @@
 
         * { many }: Use two uppercase letters in LilyPond.
 
+	* lily/main.cc, po/{ many }, scripts/{ many }: add verbs.
+
 2003-07-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* input/regression/font-name.ly: don't use PS fonts for
